# data_automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_yolo_conversion.py
.claude/: settings.local.json
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: articles.py  chat.py  documents.py
backend/app/core/: config.py  deps.py
backend/app/models/: db.py
backend/app/schemas/: documents.py
backend/app/services/: pdf.py
config/: settings.py  urls.py
deploy/k8s/: chroma.yaml  configmap.yaml  django-deployment.yaml  django-service.yaml  ingress.yaml  pvc-db.yaml  pvc-media.yaml  secret.yaml
documents/: admin.py  models.py  services.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_article_models.py
documents/templates/documents/: base.html  chat.html  detail.html  home.html  manage.html  manage_detail.html
documents/tests/: test_processing.py
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/lib/: api.ts
media/yolo_dataset/: classes.txt
media/yolo_dataset/labels/: Dolsot-bibimbap.txt  m-1-25f.txt
multimodal/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
multimodal/migrations/: 0001_initial.py
multimodal/templates/multimodal/: audio_detail.html  audio_tab.html  base.html  home.html  image_detail.html  image_tab.html  text_result.html  text_tab.html
(+1 files in other folders)
