[project]
name = "data-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.6",
    "pymupdf>=1.24.10",
    "httpx>=0.28.1",
    "pydantic>=2.8.2",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.2.1",
    "whitenoise>=6.7.0",
    "gunicorn>=21.2.0",
]
